Kubernetes/Setting Up KubeGuard in Kubernetes/policy.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sPSPPrivilegedContainer
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8spspprivileged
      violation[{"msg": msg}] {
        input.review.object.spec.securityContext.runAsUser == 0
        msg := "Running as root is not allowed!"
      }
